--- a/pages/participants.html
+++ b/pages/participants.html
@@ -38,7 +38,7 @@
                 </div>
                 <div class="participant-card">
                     <div class="participant-avatar">👤</div>
-                    <h3>Lorie</h3>
+                    <h3>Laurie</h3>
                 </div>
                 <div class="participant-card">
                     <div class="participant-avatar">👤</div>
