ajout liste et décompte

--- a/index.html
+++ b/index.html
@@ -12,6 +12,34 @@
         <div class="header-content">
             <h1 class="title-glow">🎉 Nouvel An 2026 🎉</h1>
             <p class="subtitle">Bonne année et que la fête commence !</p>
+            <div class="countdown-container">
+                <h2 class="countdown-title" id="countdown-title">Temps restant jusqu'au Nouvel An</h2>
+                <div class="countdown-display" id="countdown-display">
+                    <div class="countdown-item">
+                        <span class="countdown-number" id="days">0</span>
+                        <span class="countdown-label">Jours</span>
+                    </div>
+                    <div class="countdown-separator">:</div>
+                    <div class="countdown-item">
+                        <span class="countdown-number" id="hours">0</span>
+                        <span class="countdown-label">Heures</span>
+                    </div>
+                    <div class="countdown-separator">:</div>
+                    <div class="countdown-item">
+                        <span class="countdown-number" id="minutes">0</span>
+                        <span class="countdown-label">Minutes</span>
+                    </div>
+                    <div class="countdown-separator">:</div>
+                    <div class="countdown-item">
+                        <span class="countdown-number" id="seconds">0</span>
+                        <span class="countdown-label">Secondes</span>
+                    </div>
+                </div>
+                <div class="new-year-message" id="new-year-message" style="display: none;">
+                    <h2 class="new-year-title">🎉 BONNE ANNÉE 2026 ! 🎉</h2>
+                    <p class="new-year-subtitle">Que cette nouvelle année soit remplie de joie et de bonheur !</p>
+                </div>
+            </div>
         </div>
     </header>
     <main>
