--- a/pages/liste-de-courses.html
+++ b/pages/liste-de-courses.html
@@ -12,11 +12,12 @@
     <header>
         <a href="../index.html" class="back-link">← Retour à l'accueil</a>
         <h1 class="title-glow">Liste de courses</h1>
+        <h2 class="subtitle">Pour vous donner des idées</h2>
     </header>
     <main>
         <div class="shopping-lists">
             <div class="shopping-category">
-                <h2>🥂 Boissons à acheter</h2>
+                <h2>🥂 Boissons</h2>
                 <ul class="shopping-list">
                     <li class="shopping-item">Coca</li>
                     <li class="shopping-item">Ice Tea</li>
@@ -28,6 +29,20 @@
                     <li class="shopping-item">Jeager</li>
                     <li class="shopping-item">Fireball</li>
                     <li class="shopping-item">Champagne (faut bien trinquer à la nouvelle année)</li>
+                    <li class="shopping-item">Eau pétillante</li>
+                    <li class="shopping-item">Limonade</li>
+                    <li class="shopping-item">Jus de pomme</li>
+                    <li class="shopping-item">Red Bull / Energy drinks</li>
+                    <li class="shopping-item">Rhum</li>
+                    <li class="shopping-item">Vodka</li>
+                    <li class="shopping-item">Whisky</li>
+                    <li class="shopping-item">Gin</li>
+                    <li class="shopping-item">Tequila</li>
+                    <li class="shopping-item">Vin rouge</li>
+                    <li class="shopping-item">Vin blanc</li>
+                    <li class="shopping-item">Rosé</li>
+                    <li class="shopping-item">Cidre</li>
+                    <li class="shopping-item">Bière</li>
                 </ul>
             </div>
             <div class="shopping-category">
@@ -40,6 +55,25 @@
                     <li class="shopping-item">Chips</li>
                     <li class="shopping-item">Croques monsieur</li>
                     <li class="shopping-item">Saucisson</li>
+                    <li class="shopping-item">Cacahuètes</li>
+                    <li class="shopping-item">Amandes</li>
+                    <li class="shopping-item">Noix de cajou</li>
+                    <li class="shopping-item">Biscuits apéritifs</li>
+                    <li class="shopping-item">Bretzels</li>
+                    <li class="shopping-item">Bâtonnets de surimi</li>
+                    <li class="shopping-item">Tomates cerises</li>
+                    <li class="shopping-item">Concombre</li>
+                    <li class="shopping-item">Crudités en général</li>
+                    <li class="shopping-item">Tzatziki / Houmous</li>
+                    <li class="shopping-item">Tapenade</li>
+                    <li class="shopping-item">Foie gras</li>
+                    <li class="shopping-item">Saumon fumé</li>
+                    <li class="shopping-item">Crevettes</li>
+                    <li class="shopping-item">Petits fours salés</li>
+                    <li class="shopping-item">Quiches / Tartes salées</li>
+                    <li class="shopping-item">Biscuits sucrés</li>
+                    <li class="shopping-item">Bonbons</li>
+                    <li class="shopping-item">Chocolats</li>
                 </ul>
             </div>
         </div>
