--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1 class="title-glow">🎉 Nouvel An 2026 🎉</h1>
             <p class="subtitle">Bonne année et que la fête commence !</p>
             <div class="countdown-container">
-                <h2 class="countdown-title" id="countdown-title">Temps restant jusqu'au Nouvel An</h2>
+                <h2 class="countdown-title" id="countdown-title">Temps restant avant 2026</h2>
                 <div class="countdown-display" id="countdown-display">
                     <div class="countdown-item">
                         <span class="countdown-number" id="days">0</span>
