--- a/pages/participants.html
+++ b/pages/participants.html
@@ -17,47 +17,47 @@
         <div class="participants-container">
             <div class="participants-grid">
                 <div class="participant-card">
-                    <div class="participant-avatar">👤</div>
+                    <div class="participant-avatar">M</div>
                     <h3>Manon</h3>
                 </div>
                 <div class="participant-card">
-                    <div class="participant-avatar">👤</div>
+                    <div class="participant-avatar">G</div>
                     <h3>Gaël</h3>
                 </div>
                 <div class="participant-card">
-                    <div class="participant-avatar">👤</div>
+                    <div class="participant-avatar">G</div>
                     <h3>Gerg</h3>
                 </div>
                 <div class="participant-card">
-                    <div class="participant-avatar">👤</div>
+                    <div class="participant-avatar">L</div>
                     <h3>Laurine</h3>
                 </div>
                 <div class="participant-card">
-                    <div class="participant-avatar">👤</div>
+                    <div class="participant-avatar">C</div>
                     <h3>Chris</h3>
                 </div>
                 <div class="participant-card">
-                    <div class="participant-avatar">👤</div>
+                    <div class="participant-avatar">L</div>
                     <h3>Laurie</h3>
                 </div>
                 <div class="participant-card">
-                    <div class="participant-avatar">👤</div>
+                    <div class="participant-avatar">J</div>
                     <h3>Jo</h3>
                 </div>
                 <div class="participant-card">
-                    <div class="participant-avatar">👤</div>
+                    <div class="participant-avatar">A</div>
                     <h3>Alexis</h3>
                 </div>
                 <div class="participant-card">
-                    <div class="participant-avatar">👤</div>
+                    <div class="participant-avatar">N</div>
                     <h3>Néo</h3>
                 </div>
                 <div class="participant-card">
-                    <div class="participant-avatar">👤</div>
+                    <div class="participant-avatar">B</div>
                     <h3>Benjamin</h3>
                 </div>
                 <div class="participant-card">
-                    <div class="participant-avatar">👤</div>
+                    <div class="participant-avatar">E</div>
                     <h3>Emilie</h3>
                 </div>
             </div>
