--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy New Year 2026</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="icon" href="img/logo.png">
 </head>
 <body>
     <div class="confetti-container"></div>
