adaptation liste de courses

--- a/pages/liste-de-courses.html
+++ b/pages/liste-de-courses.html
@@ -12,7 +12,7 @@
     <header>
         <a href="../index.html" class="back-link">← Retour à l'accueil</a>
         <h1 class="title-glow">Liste de courses</h1>
-        <h2 class="subtitle">Pour vous donner des idées</h2>
+        <h2 class="subtitle">Pour vous donner des idées de trucs a acheter (tout ne doit pas etre acheté c'est une liste d'idées seulement)</h2>
     </header>
     <main>
         <div class="shopping-lists">
@@ -66,9 +66,6 @@
                     <li class="shopping-item">Crudités en général</li>
                     <li class="shopping-item">Tzatziki / Houmous</li>
                     <li class="shopping-item">Tapenade</li>
-                    <li class="shopping-item">Foie gras</li>
-                    <li class="shopping-item">Saumon fumé</li>
-                    <li class="shopping-item">Crevettes</li>
                     <li class="shopping-item">Petits fours salés</li>
                     <li class="shopping-item">Quiches / Tartes salées</li>
                     <li class="shopping-item">Biscuits sucrés</li>
