new person for fiesta

--- a/pages/participants.html
+++ b/pages/participants.html
@@ -60,6 +60,10 @@
                     <div class="participant-avatar">E</div>
                     <h3>Emilie</h3>
                 </div>
+                <div class="participant-card">
+                    <div class="participant-avatar">E</div>
+                    <h3>Cécilia</h3>
+                </div>
             </div>
             <div class="participants-summary">
                 <div class="summary-card">
