--- a/pages/participants.html
+++ b/pages/participants.html
@@ -61,7 +61,7 @@
                     <h3>Emilie</h3>
                 </div>
                 <div class="participant-card">
-                    <div class="participant-avatar">E</div>
+                    <div class="participant-avatar">C</div>
                     <h3>Cécilia</h3>
                 </div>
             </div>
