--- a/pages/participants.html
+++ b/pages/participants.html
@@ -61,6 +61,10 @@
                     <h3>Emilie</h3>
                 </div>
                 <div class="participant-card">
+                    <div class="participant-avatar">B</div>
+                    <h3>Bastien</h3>
+                </div>
+                <div class="participant-card">
                     <div class="participant-avatar">C</div>
                     <h3>Cécilia</h3>
                 </div>
